<resources>
    <string name="app_name">District of Wonders</string>
    <string name="app_label">District of Wonders</string>

    <!-- literals -->
    <string name="please_wait">Please Wait\u2026</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>

    <!-- drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_nav_feed">Feed</string>
    <string name="drawer_nav_newsletter">Newsletter</string>
    <string name="drawer_nav_patreon">Patreon</string>
    <string name="drawer_nav_sofanaut">Sofanaut</string>
    <string name="drawer_nav_shop">Shop</string>
    <string name="drawer_nav_help">Help</string>
    <string name="drawer_nav_about">About</string>
    <string name="drawer_nav_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <!-- GCM -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="gcm_registering_message">Generating InstanceID token...</string>
    <string name="gcm_token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="notifications_updating_preferences">Updating Preferences</string>
    <string name="notifications_disabled_restart">Notifications Server Unreachable.\nPlease restart the app.</string>

    <!-- links -->
    <string name="link_patreon">https://www.patreon.com/districtofwonders</string>
    <string name="link_newsletter">http://districtofwonders.com/feed</string>

    <!-- download -->
    <string name="choose_player">Choose Player:</string>
    <string name="choose_stream_player">Choose Streaming Player:</string>
    <string name="wifi_not_available">WiFi connection not available - allow download on mobile network?</string>
    <string name="download_completed">Download Completed:</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this file ?</string>
    <string name="delete">Delete</string>
    <string name="server_unreachable">Server Unreachable - Download Canceled</string>
    <string name="server_error">Server Error</string>
    <string name="newsletters">Newsletters</string>
    <string name="contacting_notification_server">Contacting Notification Server</string>
    <string name="everyone_dow">Everyone has a story in the District of Wonders, come and find yours.</string>
    <string name="staff_underline"><u>Staff</u></string>
    <string name="lior_saar"><u>Lior Saar @ INFINITE RED</u></string>
    <string name="malformed_notification">Malformed Notification</string>
    <string name="credits_url">http://infinite.red</string>
    <string name="send_mail">Send Mail...</string>

</resources>
